Fix pagination wrapping margin

--- a/src/styles/pagination.scss
+++ b/src/styles/pagination.scss
@@ -28,7 +28,7 @@
     display: block;
 
     height: 42px;
-    margin: 0 10px 0 0;
+    margin: 0 10px 10px 0;
     padding: 0 20px;
 
     text-align: center;
